Atualizações em massa: ajustes em configurações, remoção de testes antigos e adição de novos componentes e funcionalidades

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "my-vault-analyzer",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --passWithNoTests",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ignored": "jest -t \"^(?!.*VaultDataProvider).*$\"",
@@ -47,6 +49,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
+    "identity-obj-proxy": "^3.0.0",
     "js-sha1": "^0.7.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -60,7 +63,7 @@
     "react-hook-form": "^7.55.0",
     "react-plotly.js": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
-    "react-wordcloud": "^1.0.5",
+    "react-wordcloud": "^1.2.7",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
@@ -80,6 +83,7 @@
     "@types/estree": "^1.0.7",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
+    "@types/js-sha1": "^0.6.3",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^22.14.0",
     "@types/react": "^19",
